# sysrepo-plugins

./: .clang-format  CMakeLists.txt  CODEOWNERS  Doxyfile  LICENSE  README.md  REUSE.toml
.github/workflows/: ci.yml
CMakeModules/: FindLIBSDBUSCPP.cmake  FindLIBSYSTEMD.cmake  FindLIBYANG.cmake  FindLIBYANGCPP.cmake  FindNFTABLES.cmake  FindNL.cmake  FindNLOHMANN_JSON.cmake  FindSYSREPO.cmake  FindSYSREPOCPP.cmake  FindUMGMT.cmake
core/: CMakeLists.txt  README.md
core/src/: srpcpp.hpp
core/src/srpcpp/: callbacks.hpp  common.cpp  common.hpp  context.cpp  context.hpp  datastore.hpp  module-registry.hpp  module.hpp  netlink.hpp
core/src/srpcpp/netlink/: address.cpp  address.hpp  bridge.cpp  bridge.hpp  cache.cpp  cache.hpp  interface.cpp  interface.hpp  neighbor.cpp  neighbor.hpp  nexthop.cpp  nexthop.hpp  nl.cpp  nl.hpp  route.cpp  route.hpp
plugins/ieee802-dot1q-bridge-plugin/: CMakeLists.txt
plugins/ieee802-dot1q-bridge-plugin/src/: main.c  plugin.cpp  plugin.hpp
plugins/ieee802-dot1q-bridge-plugin/src/plugin/: context.cpp  context.hpp
plugins/ieee802-dot1q-bridge-plugin/src/plugin/modules/: bridging.cpp  bridging.hpp
plugins/ieee802-dot1q-bridge-plugin/src/plugin/modules/bridging/: change.cpp  change.hpp  common.hpp  context.hpp  oper.cpp  oper.hpp  rpc.cpp  rpc.hpp
plugins/ietf-access-control-list-plugin/: CMakeLists.txt
plugins/ietf-access-control-list-plugin/src/: main.c  plugin.cpp  plugin.hpp
plugins/ietf-access-control-list-plugin/src/core/: common.hpp  context.cpp  context.hpp  nft_helper.hpp  nftables.cpp  nftables.hpp
plugins/ietf-access-control-list-plugin/src/core/sub/: change.cpp  change.hpp  context.hpp  oper.cpp  oper.hpp  rpc.cpp  rpc.hpp
plugins/ietf-access-control-list-plugin/src/core/yang/: tree.cpp  tree.hpp
plugins/ietf-access-control-list-plugin/src/modules/: acl.cpp  acl.hpp
plugins/ietf-access-control-list-plugin/yang/: ietf-access-control-list@2019-03-04.yang  ietf-ethertypes@2019-03-04.yang  ietf-packet-fields@2019-03-04.yang
plugins/ietf-interfaces-plugin/: CMakeLists.txt
plugins/ietf-interfaces-plugin/docker/: Dockerfile
plugins/ietf-interfaces-plugin/docs/: DEVELOPMENT.md
plugins/ietf-interfaces-plugin/examples/: example_config_data.xml  example_interface.xml  example_static_route_data.xml  test_config.xml
plugins/ietf-interfaces-plugin/src/: main.c  plugin.cpp
plugins/ietf-interfaces-plugin/src/plugin/: context.cpp  context.hpp
plugins/ietf-interfaces-plugin/src/plugin/modules/: interfaces.cpp  interfaces.hpp
plugins/ietf-interfaces-plugin/src/plugin/modules/interfaces/: change.cpp  change.hpp  common.cpp  common.hpp  context.hpp  oper.cpp  oper.hpp
plugins/ietf-interfaces-plugin/tests/: Tests.cmake
plugins/ietf-interfaces-plugin/tests/integration/: ietf-interfaces.py  run_robot_ietf_interfaces_tests.sh  run_robot_ietf_routing_tests.sh
plugins/ietf-interfaces-plugin/tests/integration/data/: dummy.xml  loopback_addr_netmask_ipv4.xml  loopback_addr_prefix_ipv4.xml  loopback_addr_prefix_ipv6.xml  loopback_change_type.xml  loopback_description.xml  loopback_enabled.xml  loopback_ipv4_forwarding.xml  loopback_ipv6_forwarding.xml  loopback_ipv6_mtu.xml  loopback_mtu.xml  loopback_rename.xml  subinterface.xml
plugins/ietf-interfaces-plugin/tests/integration/data/routing/: static-route.xml
plugins/ietf-interfaces-plugin/tests/integration/robot-ietf-interfaces/: InterfaceVariables.py  Utils.py
plugins/ietf-interfaces-plugin/tests/integration/robot-ietf-routing/: RoutingVariables.py
plugins/ietf-interfaces-plugin/tests/routing/: CMakeLists.txt  manual_tests.md  routing_utest.c
plugins/ietf-routing-plugin/: CMakeLists.txt
plugins/ietf-routing-plugin/examples/: control-plane-protocol.xml  route-multiple-next-hops.xml
plugins/ietf-routing-plugin/src/: main.c  plugin.cpp  plugin.hpp
plugins/ietf-routing-plugin/src/plugin/: context.cpp  context.hpp
plugins/ietf-routing-plugin/src/plugin/modules/: routing.cpp  routing.hpp
plugins/ietf-routing-plugin/src/plugin/modules/routing/: change.cpp  change.hpp  common.cpp  common.hpp  context.hpp  oper.cpp  oper.hpp  rpc.cpp  rpc.hpp
plugins/ietf-routing-plugin/src/plugin/modules/routing/api/: nexthop.cpp  nexthop.hpp  rib.cpp  rib.hpp  route.cpp  route.hpp
plugins/ietf-routing-plugin/tests/: manual_tests.md
plugins/ietf-system-plugin/: CMakeLists.txt
plugins/ietf-system-plugin/docker/: Dockerfile
plugins/ietf-system-plugin/docs/: DEVELOPMENT.md  STARTUP_BEHAVIOUR.md  SYSTEMD_AUGYANG.md
plugins/ietf-system-plugin/examples/: authentication.xml  authorized-key.xml  dns-resolver.xml  hostname.xml  ntp-enabled.xml  ntp.xml  set_datetime.xml  system.xml  system_restart.xml  system_shutdown.xml  timezone-name.xml
plugins/ietf-system-plugin/src/: main.c  plugin.cpp  plugin.hpp
plugins/ietf-system-plugin/src/plugin/: common.hpp  context.cpp  context.hpp  ip.cpp  ip.hpp  ntp.cpp  ntp.hpp  sdbus.hpp
plugins/ietf-system-plugin/src/plugin/modules/: auth.cpp  auth.hpp  dns.cpp  dns.hpp  hostname.cpp  hostname.hpp  ntp.cpp  ntp.hpp  system.cpp  system.hpp  timezone-name.cpp  timezone-name.hpp
plugins/ietf-system-plugin/tests/: manual_tests.md
plugins/ietf-system-plugin/tests/integration/: ietf-system.py  run_robot_ietf_system_tests.sh
plugins/ietf-system-plugin/tests/integration/data/: system_contact.xml  system_dns_search.xml  system_hostname.xml  system_local_user_initial.xml  system_location.xml  system_ntp_disabled.xml  system_ntp_enabled.xml  system_ntp_server_add.xml  system_ntp_server_initial.xml  system_set_timezone_name.xml
plugins/ietf-system-plugin/tests/integration/robot-ietf-system/: SystemKeywords.py  SystemVariables.py  __init__.py
plugins/ietf-system-plugin/tests/unit/: Tests.cmake  system_utest.c
